--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -44,7 +44,7 @@ jobs:
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
-        TNAME: E8820S
+        TNAME: ZTE_E8820S (USB)
         KERNEL: 4.4
       run: |
         cd /opt/rt-n56u/trunk
